# gaia-agent

./: README.md  gaia.md
agent/: pom.xml  start_jade
agent/src/main/java/com/gamers/: HelloWorld.java  SecondaryAgent.java
gamers_mas/: .env.example  ARCHITECTURE.md  Dockerfile  README.md  TESTING.md  docker-compose.yml  launcher.py  main.py  pyproject.toml  requirements.txt
gamers_mas/app/: catalogs.py  matching.py  mock_data.py  protocols.py  python_guard.py  request_bus.py  request_loader.py  runtime_response.py  settings.py
gamers_mas/app/agents/: authorized_reseller_agent.py  gray_market_agent.py  local_coordinator_agent.py  marketplace_agent.py  official_store_agent.py  output_agent.py  recommendation_agent.py  software_coordinator_agent.py  user_interface_agent.py  value_ranker_agent.py
gamers_mas/infra/prosody/: prosody.cfg.lua
gamers_mas/scripts/: bootstrap_prosody_accounts.sh  create_venv_unix.sh  create_venv_windows.ps1
gamers_mas/tests/: conftest.py  test_launcher_ambiguity_resolution.py  test_matching_and_ambiguity.py
